Fichier day02/index.html et main.css  modifié sur le remote

--- a/DAY02/main.css
+++ b/DAY02/main.css
@@ -43,3 +43,9 @@ input {
 footer {
   background-color: #d0d4d9;
 }
+
+.corona {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
